# pyrus-orm

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
pyrus_orm/: catalog.py  fields.py  manager.py  model.py  session.py  types.py  utils.py
tests/: test_orm.py  test_simple_fields.py
